
*[#1410] -92111 errors accessing zone collections when zone is down
**Added zone unavailable exception

*[#1555] truncation of user DN when adding using GenAdminPI add user, works with GenAdmin for aua
**UserAO (when adding user) uses 'iadmin aua' call instead of add user call to set DN.  This is an overhead for an iRODS bug.

*[#1553] faulty sl4j bindings
**Removed explicit binding on log4j by removing binding library from maven dependencies

*[#1575] [iROD-Chat:10314] jargon-core permissions issue 
**Removed canRead and canWrite checks from IRODSFileFactory until it can also consider group permissions. This will be re-added in the next release.
**Added group permission lookup to DataObjectAO.getPermissionForDataObject() methods and IRODSFile canRead and canWrite methods.  We can add this to the list methods as well in a later feature
==Features==

*[#1264] [iROD-Chat:9666] Referencing Data Objects
**Added findById() methods to DataObjectAO and CollectionAO

*[#1250] jargon/idrop performance testing and optimization for 3.3.2
**Added cache of server properties in IRODSSession to avoid repreated queries for same host/zone

*[#902] IP - ils -A performance fix
**Add zoneHint capability to specific query
**Implement optional specific query solution for ils which does not expand group membership

*[#1392] remove icommands from remaining unit tests
**Remove wrapped icommands from remaining unit tests

*[#1392] Resource AVU methods to add and remove metadata from resources

*[#1554] user dn not being updated by userAO
**Added methods to modify user DN, put into user update code to automatically manage DN

*[#1556] up/download performance of idrop web
**Added new features to Stream2StreamAO for smarter buffering of stream copies

