@@ -77,6 +77,11 @@ Note that the following bug and feature requests are logged in GForge with relat
 *[#1575] [iROD-Chat:10314] jargon-core permissions issue 
 **Removed canRead and canWrite checks from IRODSFileFactory until it can also consider group permissions. This will be re-added in the next release.
 **Added group permission lookup to DataObjectAO.getPermissionForDataObject() methods and IRODSFile canRead and canWrite methods.  We can add this to the list methods as well in a later feature
+
+*[#1560] counts of data objects under collections skewed by replicas
+**Added counts of files and counts of collections methods to CollectionAndDataObjectListAndSearchAO.  Made queries able to ignore replicas in the counts.
+
+
 ==Features==
 
 *[#1264] [iROD-Chat:9666] Referencing Data Objects
